--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-SchoolStreet is an educational site provoding E-management services to schools.
+SchoolStreet is an educational site providing E-management services to schools.
 
